--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "*.h": "c",
         "*.q1": "c",
         "vector": "c",
-        "*.inc": "cpp"
+        "*.inc": "cpp",
+        "cmath": "c"
     }
 }
