VITA: Properly build progs

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,12 @@ nx/nzportable/nzp/progs\.lno
 
 psp/nzportable/nzp/progs.lno
 
+vita/data/nzp/nzp/progs.dat
+
+vita/data/nzp/nzp/progs.lno
+
+vita/data/nzp/nzp/progs\.lno
+
 psp/nzportable/nzp/data/ach.dat
 
 *.dat
