VITA: Change default config.cfg

--- a/vita/data/nzp/nzp/config.cfg
+++ b/vita/data/nzp/nzp/config.cfg
@@ -1,14 +1,14 @@
 unbindall
 bind "ESCAPE" "togglemenu"
+
 bind "UPARROW" "+use"
-bind "RIGHTARROW" "impulse 22"
-bind "ABUTTON" "impulse 23"
-bind "BBUTTON" "+knife"
-bind "YBUTTON" "+grenade"
-bind "RIGHTARROW" "+jump"
-bind "LEFTARROW" "+switch"
 bind "XBUTTON" "+reload"
-bind "DOWNARROW" "impulse 30"
+bind "DOWNARROW" "impulse 23"
+bind "BBUTTON" "impulse 30"
+bind "ABUTTON" "+jump"
+bind "YBUTTON" "+switch"
+bind "LEFTARROW" "+grenade"
+bind "RIGHTARROW" "+knife"
 bind "LSHOULDER" "+aim"
 bind "RSHOULDER" "+attack"
 bind "PAUSE" "pause"
